# Azure-Cost-Analyzer-

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-deploy.yml  frontend-deploy.yml  testing.yml
app/: config.py  main.py  scheduler.py
app/alembic/: env.py
app/db/: alert_operations.py  database.py  models.py  operations.py
app/exceptions/: cost_exceptions.py
app/handlers/: exception_handlers.py
app/models/: cost_models.py
app/routes/: alert_routes.py  cost_routes.py
app/services/: alert_service.py  cost_preprocessor.py  cost_service.py  cost_tasks.py
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  scheduler.py
backend/app/alembic/: README.md  env.py
backend/app/alembic/versions/: 2026_02_23_2355-86f35791102d_add_service_id_to_daily_cost.py  2026_03_03_1547-5ee2a0553292_add_alert_anomaly_tables.py  2026_03_03_1809-ea4edfd99168_add_anomaly_log.py
backend/app/azure/: auth.py  cost_client.py
backend/app/db/: alert_operations.py  models.py
backend/app/exceptions/: cost_exceptions.py
backend/app/handlers/: exception_handlers.py
backend/app/models/: alert_models.py  cost_models.py
backend/app/routes/: alert_routes.py
backend/app/services/: alert_service.py  cost_service.py  cost_tasks.py  email_service.py
backend/app/utils/: responses.py
frontend/: .env.example  .gitignore  eslint.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/: staticwebapp.config.json
frontend/src/: App.tsx  index.css
(+27 files in other folders)
